...
  val coroutineScope = rememberCoroutineScope()

  val ingredients by addRecipeViewModel.ingredients.collectAsState()
  val instructions by addRecipeViewModel.instructions.collectAsState()

  Scaffold(
      modifier = Modifier.testTag("addRecipeScreen"),
      topBar = {
        CustomTopAppBar(
            onClick = { navigationActions.goBack() },
            title = stringResource(R.string.title_of_AddRecipeScreen),
            titleTestTag = "addRecipeTitle")
      },
...
                    value = addRecipeViewModel.title.collectAsState().value,
                    onValueChange = { newTitle -> addRecipeViewModel.changeTitle(newTitle) },
                    label = { Text(stringResource(R.string.title_of_recipe)) },
                    modifier =
                        Modifier.fillMaxWidth()
                            .padding(vertical = 10.dp)
                            .testTag("inputRecipeTitle"))
              }

              // Error message for title
              item {
                ErrorTextBoxNEW(
                    addRecipeViewModel.titleError.collectAsState().value, "titleErrorMessage")
...
                    },
                    label = { Text(stringResource(R.string.servings)) },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                    modifier =
                        Modifier.fillMaxWidth()
                            .padding(vertical = 10.dp)
                            .testTag("inputRecipeServings"))
              }

              // Error message for servings
              item {
                ErrorTextBoxNEW(
                    addRecipeViewModel.servingsError.collectAsState().value, "servingsErrorMessage")
...
                    onValueChange = { newTime -> addRecipeViewModel.changeTime(newTime) },
                    label = { Text(stringResource(R.string.time)) },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                    modifier =
                        Modifier.fillMaxWidth()
                            .padding(vertical = 10.dp)
                            .testTag("inputRecipeTime"))
              }

              // Error message for time
              item {
                ErrorTextBoxNEW(
                    addRecipeViewModel.timeError.collectAsState().value, "timeErrorMessage")
...

              // Add Ingredient Button
              item {
                Spacer(modifier = Modifier.height(4.dp))
                Button(
                    onClick = { addRecipeViewModel.createNewIngredient() },
                    modifier = Modifier.height(40.dp).testTag("addIngredientButton"),
                    content = {
                      Icon(imageVector = Icons.Default.Add, contentDescription = "Add Ingredient")
                    })
              }

              // Instructions Section
...

              // Add Instruction Button
              item {
                Spacer(modifier = Modifier.height(4.dp))
                Button(
                    onClick = { addRecipeViewModel.createNewInstruction() },
                    modifier = Modifier.height(40.dp).testTag("addInstructionButton"),
                    content = {
                      Icon(imageVector = Icons.Default.Add, contentDescription = "Add Instruction")
                    })
              }

              // Footer Buttons
...
                                      context, context.getString(message), Toast.LENGTH_SHORT)
                                  .show()
                            })
                      }
                      navigationActions.goBack()
                    },
                    button2TestTag = "addButton",
                    button2Text = stringResource(R.string.add_button))
              }
            }

        // Ingredient Dialog, inside the composable block
        if (addRecipeViewModel.showIngredientDialog.collectAsState().value) {
...
    OutlinedTextField(
        value = addRecipeViewModel.instructions.collectAsState().value[index],
        onValueChange = { newInstruction ->
          addRecipeViewModel.changeInstruction(index, newInstruction)
        },
        label = { Text(stringResource(R.string.instruction_step, index + 1)) },
        modifier = Modifier.weight(1f).testTag("inputRecipeInstruction"))
    IconButton(
        onClick = { addRecipeViewModel.removeInstruction(index) },
        modifier = Modifier.testTag("deleteInstructionButton")) {
          Icon(imageVector = Icons.Default.Delete, contentDescription = "Delete Step")
        }
  }
...
        Column(modifier = Modifier.testTag("addIngredientPopUp")) {
          // ingredient name
          OutlinedTextField(
              value = addRecipeViewModel.ingredientName.collectAsState().value,
              onValueChange = { newName -> addRecipeViewModel.changeIngredientName(newName) },
              label = { Text(stringResource(R.string.ingredient_name)) },
              modifier = Modifier.fillMaxWidth().testTag("inputIngredientName"))
          // error message if ingredient name is empty
          ErrorTextBoxNEW(
              addRecipeViewModel.ingredientNameError.collectAsState().value,
              "ingredientNameErrorMessage")

          // ingredient quantity (it is a string but will be transformed later on)
...
              value = addRecipeViewModel.ingredientQuantityAmount.collectAsState().value,
              onValueChange = { newAmount ->
                addRecipeViewModel.changeIngredientQuantityAmount(newAmount)
              },
              label = { Text(stringResource(R.string.ingredient_quantity)) },
              keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
              modifier = Modifier.fillMaxWidth().testTag("inputIngredientQuantity"))

          // error message if the ingredient quantity is empty
          ErrorTextBoxNEW(
              addRecipeViewModel.ingredientQuantityAmountError.collectAsState().value,
              "ingredientQuantityErrorMessage")

...
                          "Please correct the errors before submitting.",
                          Toast.LENGTH_SHORT)
                      .show()
                }
              }
            },
            modifier = Modifier.testTag("addIngredientButton2"),
            colors =
                ButtonDefaults.buttonColors(
                    containerColor = primaryContainerDark,
                    contentColor = secondaryContainerLight)) {
              Text(stringResource(R.string.add_ingredient))
            }
...
