...
                          contentDescription = "Delete",
                          tint = MaterialTheme.colorScheme.error)
                    }
              }
            })
      },
      modifier = Modifier.testTag("HouseHoldCreationScreen")) { paddingValues ->
        Column(
            modifier =
                Modifier.padding(paddingValues).padding(30.dp).padding(top = 50.dp).fillMaxSize(),
            horizontalAlignment = Alignment.CenterHorizontally) {
              OutlinedTextField(
                  value = houseHoldName,
...
                          color = MaterialTheme.colorScheme.error)
                    }
                  },
                  label = { Text("Household Name") },
                  placeholder = { Text("Enter Household Name") },
                  modifier =
                      Modifier.padding(30.dp).fillMaxWidth().testTag("HouseHoldNameTextField"))

              Text(
                  "Household Members",
                  style = TextStyle(fontSize = 24.sp, fontWeight = FontWeight.Bold),
                  textAlign = TextAlign.Start,
                  modifier =
...
                                value = emailInput,
                                onValueChange = { emailInput = it },
                                label = { Text("Friend's Email") },
                                placeholder = { Text("Enter email") },
                                singleLine = true,
                                keyboardActions = KeyboardActions(onDone = { addEmailCard() }),
                                modifier = Modifier.weight(1f).testTag("EmailInputField"))
                            IconButton(
                                onClick = { addEmailCard() },
                                modifier = Modifier.testTag("AddEmailButton")) {
                                  Icon(
                                      imageVector = Icons.Default.Check,
                                      contentDescription = "Add Email")
...
                        isError = true
                      } else {
                        navigationActions.navigateTo(Screen.OVERVIEW)
                      }
                    }
                  },
                  button2TestTag = "ConfirmButton",
                  button2Text = stringResource(R.string.save_button))

              DeletionConfirmationPopUp(
                  showDeleteDialog = showConfirmationDialog,
                  onDismiss = { showConfirmationDialog = false },
                  onConfirm = {
...
